# reasoning-with-sampling

./: .gitignore  main.py  pyproject.toml
.github/: copilot-instructions.md
llm_experiments/: batched_scalable.py  mock_LLM.py  power_samp_math.py  power_samp_utils.py  scalable_power.py  test_scalable_power.py  test_shakespeare.py
llm_experiments/data/: all_questions.json  test_questions.json
llm_experiments/shakespeare/: config.json
